--- a/index.html
+++ b/index.html
@@ -1,27 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Psychic Game</title>
+    <title>The Psychic Game</title>
 </head>
 <body>
-
-    <div ></div>
-    <div id="wins">0</div>
-        <p>Wins:</p>
-    <div id="loses">0</div>
-    <div id="guessesLeft">0</div>
-    <div id="guessesSofar">0</div>
-
-
-    
-
-
-    <script type="text/javascript" src="assets/javascript/script.js"></script>
-
-
-
+    <div id="game">
+        <h1>The Psychic Game</h1>
+        <p>Guess what letter I'm thinking of!</p>
+        <p>Total Wins: </p>
+        <p>Total Losses: </p>
+        <p>Guesses Left: </p>
+        <p>Your Guesses so far: </p>
+    </div>
+<script type="text/javascript">
+    var wins = 0;
+    var losses = 0;
+    var guessesLeft = 9;
+    var guessesSoFar = []; // a
+    var computerChoices = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n',]; //list of letters to choose from
+    document.onkeyup = function(event) {
+        var userGuess = String.fromCharCode(event.keyCode).toLowerCase(); //taking in user guess///
+        var computerGuess = computerChoices[Math.floor(Math.random()*computerChoices.length)]; //cpu selects random letter//
+        guessesSoFar.push(userGuess); //pushing user guess to guesses so far///
+        if (userGuess == computerGuess) {
+            wins++;
+            alert('Way to go! You\'ve guesesed corrrectly. You Won!');
+            guessesLeft = 9; //reseting the guesses back to 9 so that the user can play again///
+            guessesSoFar.length = 0; //removes previous guessed letters from game after reset///
+        }
+        else if (guessesLeft == 0){
+            losses++;
+            alert('You didn\'t guess the correct letter. You lost. Let\'s try again.');
+            guessesLeft = 9;
+            guessesSoFar.length = 0;
+        }
+        else if (userGuess !== computerGuess){
+            guessesLeft--; //decreasing the guesses left///
+        }  
+        // pushing tallies to display in html 
+        var html = "<h1>The Psychic Game</h1>" + 
+        "<p>Guess what letter I'm thinking of!</p>" +
+        "<p>Total Wins: " + 
+        wins + 
+        "</p>" +
+        "<p>Total Losses: " + 
+        losses + 
+        "</p>" +
+        "<p>Guesses Left: " + 
+        guessesLeft + 
+        "</p>" +
+        "<p>Your Guesses so far: " +
+        guessesSoFar +
+        "</p>"
+        ;
+        // places html in game ID
+        document.querySelector('#game').innerHTML = html;
+    }
+</script>
 </body>
 </html>
